# SCP-cv

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_TODO.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  STYLE.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: API.md  CHANGELOG.md  openapi.yaml  使用文档.md  前端设计稿.md  维护文档.md  视频墙显示控制包整理.md  需求I.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scp_cv/: asgi.py  context_processors.py  cors_middleware.py  grpc_handlers.py  grpc_servicers.py  settings.py  urls.py  wsgi.py
scp_cv/grpc_generated/: __init__.py
scp_cv/grpc_servicers/: __init__.py  display.py  helpers.py  media.py  playback.py  scenario.py  servicer.py  streaming.py
scp_cv/player/: __init__.py  control_panel.py  (+11 more)
templates/: base.html
tests/: test_cors_middleware.py  test_device_service.py  test_grpc_servicers.py  test_headless_launcher.py  test_media_previews.py  test_media_service.py  test_media_update_service.py  test_mediamtx_service.py  test_migrations.py  test_playback_display_service.py  test_playback_service.py  test_player_controller.py  test_ppt_adapter.py  test_ppt_window.py  test_rest_api.py  test_runall_command.py  test_runall_service.py  test_scenario_service.py  test_srt_stream_adapter.py  test_sse_service.py  test_video_wall_service.py  test_volume_service.py
tools/: download_third_party.ps1  install_pygobject.py  verify_srt_playback.py
(+200 files in other folders)
