[project]
name = "scp-cv"
version = "1.0.0"
description = "面向单机大屏场景的统一播放控制系统"
readme = "README.md"
license = "Artistic-2.0"
requires-python = ">=3.12"
dependencies = [
  "Django==6.0.3",
  "djangorestframework==3.17.1",
  "django-socio-grpc==0.25.0",
  "grpcio==1.80.0",
  "grpcio-tools==1.80.0",
  "protobuf==6.33.6",
  "django-environ==0.13.0",
  "PySide6==6.11.0",
  "screeninfo==0.8.1",
  "psutil==7.2.2",
  "requests==2.32.3",
  "pywin32>=310",
  "python-vlc>=3.0.21203",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-django==4.12.0",
  "ruff==0.15.9",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
extend-exclude = ["scp_cv/grpc_generated"]
